beast-splitter (7.1) stable; urgency=medium

  * No-change release for PiAware 7.1

 -- Eric Tran <eric.tran@flightaware.com>  Tue, 11 Jan 2022 07:44:22 -0600

beast-splitter (7.0) stable; urgency=medium

  * No-change release for PiAware 7.0

 -- Eric Tran  <eric.tran@flightaware.com>  Mon, 20 Dec 2021 11:21:20 -0600

beast-splitter (6.1) stable; urgency=medium

  * No-change release for PiAware 6.1

 -- Oliver Jowett <oliver.jowett@flightaware.com>  Mon, 06 Sep 2021 16:01:31 +0800

beast-splitter (6.0) stable; urgency=medium

  * No-change release for PiAware 6

 -- Eric Tran <eric.tran@flightaware.com>  Tue, 31 Aug 2021 16:00:00 -0600

beast-splitter (5.0) stable; urgency=medium

  * No-change release for PiAware 5

 -- Eric Tran <eric.tran@flightaware.com>  Thu, 11 Mar 2021 07:18:00 -6000

beast-splitter (4.0) stable; urgency=medium

  * No-change release for PiAware 4.0

 -- Eric Tran <eric.tran@flightaware.com>  Wed, 23 Sep 2020 16:07:00 -6000

beast-splitter (3.8.1) stable; urgency=medium

  * Ensure that we send a new settings message on each new (source-side)
    connection

 -- Eric Tran <eric.tran@flightaware.com>  Tue, 03 Mar 2020 10:11:00 -6000

beast-splitter (3.8.0) stable; urgency=medium

  * Add support for verbatim (v/V) mode
  * Add support for 1-bit FEC, required when there is a mix of verbatim and
    non-verbatim clients
  * Only send settings messages upstream when the requested settings have
    actually changed

 -- Oliver Jowett <oliver.jowett@flightaware.com>  Mon, 30 Dec 2019 22:12:47 +0800

beast-splitter (3.7.2) stable; urgency=medium

  * Fix hardware flow control setting
  * Build automation tweaks

 -- Eric Tran <eric.tran@flightaware.com>  Mon, 09 Sep 2019 02:07:00 -6000

beast-splitter (3.7.1) stable; urgency=medium

  * No-change release for PiAware 3.7.1

 -- Eric Tran <eric.tran@flightaware.com>  Mon, 15 Apr 2019 01:03:00 -6000

beast-splitter (3.7.0.1) stable; urgency=medium

  * No-change release for PiAware 3.7.0.1
