@@ -1,8 +1,9 @@
 beast-splitter (7.1) stable; urgency=medium
 
-  * No-change release for PiAware 7.1
+  * Preserve beast-splitter postinst logic during upgrade
+    (triggered by a behavioral change between debhelper compat 9 and compat 10)
 
- -- Eric Tran <eric.tran@flightaware.com>  Tue, 11 Jan 2022 07:44:22 -0600
+ -- Eric Tran <eric.tran@flightaware.com>  Wed, 12 Jan 2022 09:06:22 -0600
 
 beast-splitter (7.0) stable; urgency=medium
 
